objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Slintel_Contact_Decision_Making_Power__c</fullName>
        <label>Slintel Contact Decision Making Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Division__c</fullName>
        <label>Slintel Contact Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Email_Confidence__c</fullName>
        <label>Slintel Contact Email Confidence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Id__c</fullName>
        <label>Slintel Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_LinkedIn_Url__c</fullName>
        <label>Slintel Contact LinkedIn Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Phone__c</fullName>
        <label>Slintel Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_State__c</fullName>
        <label>Slintel Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Title__c</fullName>
        <label>Slintel Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Creator__c</fullName>
        <label>Slintel Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Revenue__c</fullName>
        <label>Slintel Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Interest__c</fullName>
        <label>Solution Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI/CD</fullName>
                </value>
                <value>
                    <fullName>Test Automation</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Started_First_Module__c</fullName>
        <label>Started First Module</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Country__c</fullName>
        <label>Target Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Target_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_in_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is for Salesforce.com employees that have been targeted in campaigns, to ensure they are not emailed multiple times.</inlineHelpText>
        <label>Targeted in Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tocca_Token__c</fullName>
        <externalId>true</externalId>
        <label>Tocca Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Contact_Questionnaire_Type__c</fullName>
        <description>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</description>
        <formula>Account.TopBoxWG__TopBox_Next_Questionnaire_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</inlineHelpText>
        <label>TopBox - Next Questionnaire Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Overall_Score__c</fullName>
        <label>Sentiment (0-10 Rating)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CTA__c</fullName>
        <label>TopBox CTA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Individual_Response__c</fullName>
        <label>TopBox Individual Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
		,TopBoxWG__TopBox_Initial_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Initial to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Initial PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Send_Date__c</fullName>
        <description>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Initial Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</fullName>
        <description>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</description>
        <formula>Account.TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Next Questionnaire Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Renewal_Send_Date__c</fullName>
        <description>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Renewal Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Onboarding_PreNote_OK__c</fullName>
        <formula>AND(
					TopBoxWG__TopBox_Send_Survey__c,
					TopBoxWG__TopBox_Send_PreNote__c
				,TopBoxWG__TopBox_Onboarding_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Onboarding to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Onboarding PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Onboarding_Send_Date__c</fullName>
        <description>Date on which the Onboarding questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field will be blank for accounts that have completed the onboarding process more than 2 months ago.</description>
        <inlineHelpText>Date on which the Onboarding assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field may be blank for accounts that have completed the onboarding process more than 8 months ago.</inlineHelpText>
        <label>TopBox - Onboarding Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Ongoing_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
		,TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Ongoing to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Ongoing PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c</fullName>
        <description>Date on which the next Ongoing Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing Relationship date has passed, the field automatically updates to reflect the next Ongoing Relationship send date.</description>
        <inlineHelpText>Date on which the next Ongoing questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Ongoing Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_PreNote_APEX_OK__c</fullName>
        <formula>TopBoxWG__TopBox_Send_PreNote__c &amp;&amp;  TopBoxWG__TopBox_Send_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of Apex code for Custom Metadata Types &gt; Topbox PreNote Email to determine if contacts will receive TopBox PreNote emails prior to a scheduled questionnaire.</inlineHelpText>
        <label>TopBox PreNote APEX OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Renewal_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
				,TopBoxWG__TopBox_Next_Renewal_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Renewal to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Renewal PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Role__c</fullName>
        <label>TopBox Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Holder</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Send_PreNote__c</fullName>
        <formula>$CustomMetadata.TopBoxWG__TopBox_Settings__mdt.TopBoxWG__Global_Settings.TopBoxWG__Send_PreNote_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field shows whether Custom Metadata Types &gt; TopBox Settings &gt; Global Settings: Send PreNote Emails checkbox is True/False (active/inactive).</inlineHelpText>
        <label>TopBox - Send PreNote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box to include the contact in the upcoming Onboarding or Initial/Renewal Relationship questionnaires. If the Next Questionnaire Type is Onboarding, make sure to select the contact prior to the Onboarding Send Date. If the next scheduled questionnaire type is Initial/Renewal, make sure to select the contact at least 25 hrs prior the Next Questionnaire Send Date (in order to schedule the Pre-Note email 24 hours prior to the Next Questionnaire Send Date).</description>
        <inlineHelpText>Check the box to include the contact in the upcoming Onboarding or Adoption/Pre-Renewal/Steady State questionnaires prior to the Send Dates. If the Next Questionnaire Type is Adoption/Pre-Renewal/Steady State, select the contact at least 25 hours in advance to also send the Pre-Note email.</inlineHelpText>
        <label>TopBox - Send Onboarding/Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBox_Adoption_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Adoption assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Adoption Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Pre_Renewal_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Pre-Renewal assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Pre-Renewal Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Steady_State_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Steady State assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the current feedback wave has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Steady State Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Date_of_Last_Completion__c</fullName>
        <description>Completion timestamp of the last executed Complete flow.</description>
        <label>Date of Last Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Disable_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_In_Seconds__c</fullName>
        <label>First Response Time In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_Start__c</fullName>
        <label>First Response Time Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Original_Completion_Date__c</fullName>
        <description>Completion timestamp of the original Complete flow.</description>
        <label>Original Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Re_Run_Realtime_Clean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Traction Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Error_Message__c</fullName>
        <label>Traction Complete Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traction Complete Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traction Complete Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Response_Time_Within_Business_Hours__c</fullName>
        <label>Response Time Within Business Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time_Delay_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Delay Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time_of_Last_Auto_Merge__c</fullName>
        <label>Time of Last Auto Merge</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <formula>HYPERLINK(&quot;http://copa.do/Unsubscribe?id=&quot; &amp; Id &amp; &quot;&amp;email=&quot; &amp; Email, &quot;click here&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unsubscribe all contacts and leads with this email address</inlineHelpText>
        <label>Unsubscribe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vorname__c</fullName>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vorname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Industry__c</fullName>
        <label>6s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Code__c</fullName>
        <label>6s NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Description__c</fullName>
        <label>6s NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Revenue_Range__c</fullName>
        <label>6s Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Code__c</fullName>
        <label>6s SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Description__c</fullName>
        <label>6s SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Segments__c</fullName>
        <label>6s Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Function__c</fullName>
        <label>6s Title Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Level__c</fullName>
        <label>6s Title Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Updated__c</fullName>
        <label>6s Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense_Copado__c</fullName>
        <label>6sense Account Buying Stage Copado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense_Copado__c</fullName>
        <label>6sense Account Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense_Copado__c</fullName>
        <label>6sense Account Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense_Copado__c</fullName>
        <label>6sense Account Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre__Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Auto_collection__c</fullName>
        <label>Auto collection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__ChargeBee_Modified_Time__c</fullName>
        <label>ChargeBee_Modified_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__External_Id__c</fullName>
        <description>CB external id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Net_Term_Days__c</fullName>
        <description>Net Term days picklist from Salesforce</description>
        <label>Net Term Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>chargebeeapps__Net_Term_Days</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Payment_Method_Status__c</fullName>
        <description>Payment Method Status</description>
        <label>Payment Method Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Payment_Method_Type__c</fullName>
        <description>Payment method type</description>
        <label>Payment Method Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Preferred_currency__c</fullName>
        <label>Preferred currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Sync_with_Chargebee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Chargebee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contactGrade6sense_Copado__c</fullName>
        <label>6sense Contact Grade Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactIntentScore6sense_Copado__c</fullName>
        <label>6sense Contact Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactProfileFit6sense_Copado__c</fullName>
        <label>6sense Contact Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactProfileScore6sense_Copado__c</fullName>
        <label>6sense Contact Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactUpdateDate6sense_Copado__c</fullName>
        <label>6sense Contact Update Date Copado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
        <label>Ebsta Score Trend Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
        <label>Ebsta Score Trend Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_90_Days__c</fullName>
        <label>Ebsta Score Trend Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Ebsta_Stats_Update__c</fullName>
        <label>Last Ebsta Stats Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Activity_Date__c</fullName>
        <label>Last Email Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_inbound__c</fullName>
        <label>Last month emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_outbound__c</fullName>
        <label>Last month emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_inbound__c</fullName>
        <label>Last week emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_outbound__c</fullName>
        <label>Last week emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Out_of_office_until__c</fullName>
        <description>Ebsta out of office field.</description>
        <label>Out of office until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_inbound__c</fullName>
        <label>Total emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_outbound__c</fullName>
        <label>Total emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugadd__DisableAccountToContactSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account to Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PayPal_Payer_Id__c</fullName>
        <inlineHelpText>Id assigned by PayPal to this contact.</inlineHelpText>
        <label>PayPal Payer Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Status__c</fullName>
        <label>Gift Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Gifted__c</fullName>
        <formula>IF( lnt__Gift_Status__c  &lt;&gt; null , &apos;Gift Sent&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Marketing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Not_Gifted__c</fullName>
        <formula>IF( lnt__Gift_Status__c  = null, &apos;Not Gifted&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Gifted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Test_Custom_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Custom User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Work_Anniversary__c</fullName>
        <description>custom field for testing</description>
        <inlineHelpText>custom field for testing</inlineHelpText>
        <label>Work Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lnt__of_Total_Activities__c</fullName>
        <label># of Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <label>MK Customer Fit</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_score__c</fullName>
        <label>MK Lead Grade Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_segment__c</fullName>
        <label>MK Lead Grade Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_score__c</fullName>
        <label>MK Likelihood To Buy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_segment__c</fullName>
        <label>MK Likelihood To Buy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_recent_activity__c</fullName>
        <label>MK Recent Activity</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Number1__c</fullName>
        <label>Modigie Alternate Mobile Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Number2__c</fullName>
        <label>Modigie Alternate Mobile Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Available__c</fullName>
        <label>Alternate Mobile Phone Number Available</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Number_Available__c</fullName>
        <formula>CASE( modigie__Alternate_Mobile_Phone_Available__c, &apos;Yes&apos;, IMAGE(&quot;/resource/modigie__Yes_word_image&quot;, &quot;Yes Image&quot;,12,22), &apos;No&apos;, IMAGE(&quot;/resource/modigie__No_Word_Image&quot;, &quot;No Image&quot;,10,20) ,&apos;&apos;)</formula>
        <label>Alternate Mobile Phone Number Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Converted_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helps to Check if Contact is Converted from Lead</description>
        <label>Converted From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Enable_Validate_Employer_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Validate Employer Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Dynamic_Criteria_Field_Values_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic Criteria Field Values Changed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>